--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   get: 4.6.5
   flutter: 
     sdk: flutter
+  http: ^0.13.5
+  shared_preferences: ^2.0.15
+  image_picker: ^0.8.5+3
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
